--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: 부일의 개발블로그 # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: 배운코드를 내 코드로 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
@@ -32,16 +32,16 @@ description: >- # used by seo meta and the atom feed
 url: "https://choi2021.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: choi2021 # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+#twitter:
+# username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com # change to your email address
+  name: Youngjun Choi
+  email: juni2004c@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
