--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-remote_theme: 'mmistakes/minimal-mistakes'
+# remote_theme: 'mmistakes/minimal-mistakes'
 minimal_mistakes_skin: 'default' # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -23,7 +23,7 @@ name: 'Youngjun Choi'
 description: '매일의 시행착오를 기록하는 개발블로그입니다.'
 url: https://choi2021.github.io
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: 'choi2021/choi2021.github.io' # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository: 'choi2021/comments' # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
@@ -266,7 +266,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
+      read_time: true
       show_date: true # 작성날짜 관련 추가
       comments: # true
       share: true
