--- a/_config.yml
+++ b/_config.yml
@@ -11,26 +11,26 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme: 'minimal-mistakes-jekyll'
-remote_theme: 'mmistakes/minimal-mistakes'
-minimal_mistakes_skin: 'default' # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale: 'ko-KR'
-title: '부일의 개발일지'
-title_separator: '-'
+locale: "ko-KR"
+title: "Troy의 개발일지"
+title_separator: "-"
 subtitle: # site tagline that appears below site title in masthead
-name: 'Youngjun Choi'
-description: '매일의 시행착오를 기록하는 개발블로그입니다.'
+name: "Youngjun Choi"
+description: "매일의 시행착오를 기록하는 개발블로그입니다."
 url: https://choi2021.github.io
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: 'choi2021/choi2021.github.io' # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository: "choi2021/choi2021.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
 comments:
-  provider: 'utterances' # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  provider: "utterances" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
     shortname: # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
@@ -41,8 +41,8 @@ comments:
     num_posts: # 5 (default)
     colorscheme: # "light" (default), "dark"
   utterances:
-    theme: 'github-light' # "github-light" (default), "github-dark"
-    issue_term: 'pathname' # "pathname" (default)
+    theme: "github-light" # "github-light" (default), "github-dark"
+    issue_term: "pathname" # "pathname" (default)
   staticman:
     branch: # "master"
     endpoint: # "https://{your Staticman v3 API}/v3/entry/github/"
@@ -93,29 +93,29 @@ analytics:
 
 # Site Author
 author:
-  name: 'Buil1'
-  avatar: '/assets/img/bio-photo.png' # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: '매일의 시행착오를 기록하는 개발일지입니다.'
+  name: "Troy"
+  avatar: "/assets/img/bio-photo.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio: "매일의 시행착오를 기록하는 개발일지입니다."
   # location: 'Gwangju, Republic of Korea'
   email:
   links:
-    - label: 'Email'
-      icon: 'fas fa-fw fa-envelope-square'
-      url: 'mailto:juni2004c@gmail.com'
-    - label: 'Website'
-      icon: 'fas fa-fw fa-link'
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:juni2004c@gmail.com"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: 'Twitter'
-      icon: 'fab fa-fw fa-twitter-square'
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
-    - label: 'Facebook'
-      icon: 'fab fa-fw fa-facebook-square'
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-    - label: 'GitHub'
-      icon: 'fab fa-fw fa-github'
-      url: 'https://github.com/choi2021'
-    - label: 'Instagram'
-      icon: 'fab fa-fw fa-instagram'
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/choi2021"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
 # Site Footer
@@ -127,9 +127,9 @@ footer:
     # - label: 'Facebook'
     #   icon: 'fab fa-fw fa-facebook-square'
     #   # url:
-    - label: 'GitHub'
-      icon: 'fab fa-fw fa-github'
-      url: 'https://github.com/choi2021'
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/choi2021"
     # - label: 'GitLab'
     #   icon: 'fab fa-fw fa-gitlab'
     #   # url:
@@ -145,8 +145,8 @@ include:
   - .htaccess
   - _pages
 exclude:
-  - '*.sublime-project'
-  - '*.sublime-workspace'
+  - "*.sublime-project"
+  - "*.sublime-workspace"
   - vendor
   - .asset-cache
   - .bundle
@@ -174,8 +174,8 @@ exclude:
 keep_files:
   - .git
   - .svn
-encoding: 'utf-8'
-markdown_ext: 'markdown,mkdown,mkdn,mkd,md'
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Conversion
 markdown: kramdown
@@ -261,7 +261,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ''
+      path: ""
       type: posts
     values:
       layout: single
@@ -274,7 +274,7 @@ defaults:
       related: true
       toc: true
       toc_sticky: true
-      toc_label: '목차'
+      toc_label: "목차"
       sidebar_main: true
 
   # - scope:
